# MSc_thesis

./: .env  .gitignore  Pipfile  docker-compose.yaml  pyproject.toml  requirements.txt
adversary/: Dockerfile  requirements.txt
adversary/src/: adversary.py
client/: Dockerfile
client/src/: client.py  client_requests.py  client_sel.py
demo/adv/: adversary.py  payload.html
demo/adversary/: Dockerfile  requirements.txt
demo/app/: app.py  db.sqlite
demo/app/templates/: base.html
demo/app/templates/index/: index.html
demo/app/templates/login/: login.html
demo/app/templates/profile/: profile.html
demo/app/templates/shop/: product.html  shop.html
demo/client/: Dockerfile
demo/client/src/: client.py
server/: Dockerfile  server.py
server/certs/: ClientCA.pem  server.crt  server.csr  server.key
server/db/: db.sqlite  init.sql
server/src/: __init__.py  cookie.py  db_helpers.py  routes.py  server.py
server/src/static/js/: challenge_response.js  fingerprint.js  test.js
server/src/templates/: alive.html  login.html  user.html
server/src/templates/user/: user.html  user_body.html
tests/results/: plotter.py  timings.json
tests/src/: client_side_tests.py  load_test.py  locustfile.py
